<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories"
    android:layout_margin="@dimen/Nomargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgrnd"
    tools:context="com.accurate.dialdali.HomeActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <EditText
        android:imeOptions="actionSearch"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableRight="@drawable/search"
        android:paddingEnd="@dimen/margin_small"
        android:hint="search here"
        android:paddingLeft="@dimen/margin_small"
        android:id="@+id/searchbar"
        android:background="@drawable/edit_round"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frag_display"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.25" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_small"
        android:id="@+id/newstitle"
        android:background="@color/colorBackgrnd"
        android:text="@string/naraul_news"
        android:textSize="@dimen/Textsize_medium"
        android:textAlignment="center"
        android:textColor="@color/colornewstitle"
        android:layout_marginBottom="@dimen/margin_small"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frag_display"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:visibility="gone"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_action_name"
        android:id="@+id/home_menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frag_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/searchbar"
        android:layout_marginTop="16dp" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/frag_display"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_navbar"
        app:layout_constraintTop_toBottomOf="@+id/searchbar"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="8dp"></RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:id="@+id/main_navbar"
        app:layout_constraintTop_toBottomOf="@+id/frag_display"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorCardView"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/home"
            android:id="@+id/hometextview"
            android:textStyle="bold"
            android:gravity="right|center_vertical"
            android:textSize="@dimen/Textsize_medium"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/todaynews"
            android:id="@+id/todaynewstextview"
            android:textStyle="bold"
            android:gravity="left|center_vertical"
            android:textSize ="@dimen/Textsize_medium"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>